# AOC22

./: .gitignore  Cargo.toml  README.md  init.ps1
.cargo/: config
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/workflows/: readme-stars.yml
src/: lib.rs
