[package]
name = "aoc"
version = "0.6.3"
authors = ["Felix Spöttel <1682504+fspoettel@users.noreply.github.com>"]
edition = "2021"
default-run = "aoc"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pico-args = "0.5.0"
regex = "1.7.0"
itertools = "0.10.5"
petgraph = "0.6.2"
indicatif = {version = "0.17.2", features = ["rayon"]}
rayon = "1.6.1"
